--- a/package.json
+++ b/package.json
@@ -25,15 +25,23 @@
     "externalplugins": ""
   },
   "dependencies": {
+    "babel-relay-plugin": "0.9.3",
     "browser-info": "0.4.0",
+    "chalk": "1.1.3",
     "classnames": "2.2.3",
     "clipboard": "1.5.10",
     "cnvs": "1.0.7",
     "cookie": "0.2.3",
     "d3": "3.5.16",
+    "dataloader": "1.2.0",
     "dcos-dygraphs": "1.1.0-beta.3",
     "deep-equal": "1.0.1",
     "flux": "2.1.1",
+    "graphql": "0.7.0",
+    "graphql-tools": "0.8.0",
+    "koa": "1.2.4",
+    "koa-graphql": "0.5.6",
+    "koa-mount": "1.3.0",
     "less-color-lighten": "0.0.1",
     "md5": "2.1.0",
     "mesosphere-react-typeahead": "0.8.3",
@@ -53,6 +61,7 @@
     "reactjs-components": "0.16.0-beta.0",
     "reactjs-mixin": "0.0.2",
     "redux": "3.3.1",
+    "request-promise": "4.1.1",
     "tv4": "1.2.7",
     "underscore": "1.7.0"
   },
@@ -60,7 +69,7 @@
     "autoprefixer": "6.3.6",
     "babel": "6.5.2",
     "babel-cli": "6.9.0",
-    "babel-core": "6.9.1",
+    "babel-core": "6.17.0",
     "babel-loader": "6.2.4",
     "babel-plugin-transform-runtime": "6.9.0",
     "babel-polyfill": "6.9.1",
@@ -68,6 +77,7 @@
     "babel-preset-jest": "12.1.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-react-hmre": "1.1.1",
+    "babel-preset-stage-0": "6.5.0",
     "babel-register": "6.9.0",
     "babel-runtime": "6.9.2",
     "css-loader": "0.23.1",
@@ -94,6 +104,7 @@
     "localStorage": "1.0.3",
     "marked": "0.3.5",
     "node-libs-browser": "1.0.0",
+    "nodemon": "1.10.2",
     "postcss": "5.0.21",
     "postcss-loader": "0.8.2",
     "purify-css": "1.1.9",
@@ -130,6 +141,8 @@
     "serve-notify": "export NOTIFY=true && npm run serve",
     "scaffold": "./node_modules/.bin/gulp ensureConfig && ./node_modules/.bin/gulp ensureDevProxy",
     "start": "npm run check-env && NODE_ENV=development webpack-dev-server --config ./webpack/webpack.dev.babel.js --hot --progress --colors --content-base ./build --host 0.0.0.0 --port $npm_package_config_port",
+    "server": "npm run update-schema && nodemon --watch ./graphql/api --exec \"npm run update-schema && node graphql/index.js\"",
+    "update-schema": "node graphql/scripts/updateSchema.js",
     "test": "node jest/gen-config.js && NODE_PATH=node_modules jest --config=jest/config.json --no-cache",
     "testing": "NODE_ENV=testing webpack-dev-server --config ./webpack/webpack.dev.babel.js --progress --colors --content-base ./build --port $npm_package_config_port"
   },
