--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "moment": "2.13.0",
     "prettycron": "0.10.0",
     "query-string": "4.1.0",
+    "querystring": "^0.2.0",
     "react": "0.14.7",
     "react-ace": "3.4.1",
     "react-addons-css-transition-group": "0.14.7",
