--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "moment": "2.13.0",
     "prettycron": "0.10.0",
     "query-string": "4.1.0",
-    "querystring": "^0.2.0",
+    "querystring": "0.2.0",
     "react": "0.14.7",
     "react-ace": "3.4.1",
     "react-addons-css-transition-group": "0.14.7",
@@ -70,7 +70,7 @@
     "autoprefixer": "6.3.6",
     "babel": "6.5.2",
     "babel-cli": "6.9.0",
-    "babel-core": "6.17.0",
+    "babel-core": "6.18.2",
     "babel-loader": "6.2.4",
     "babel-plugin-transform-runtime": "6.9.0",
     "babel-polyfill": "6.9.1",
@@ -142,7 +142,8 @@
     "serve-notify": "export NOTIFY=true && npm run serve",
     "scaffold": "./node_modules/.bin/gulp ensureConfig && ./node_modules/.bin/gulp ensureDevProxy",
     "start": "npm run check-env && NODE_ENV=development webpack-dev-server --config ./webpack/webpack.dev.babel.js --hot --progress --colors --content-base ./build --host 0.0.0.0 --port $npm_package_config_port",
-    "server": "npm run update-schema && nodemon --watch ./graphql/api --exec \"npm run update-schema && node graphql/index.js\"",
+    "graphql-mock": "npm run update-schema && nodemon --watch ./graphql/api --exec \"npm run update-schema && GRAPHQL_ENV=mock node graphql/index.js\"",
+    "graphql": "npm run update-schema && nodemon --watch ./graphql/api --exec \"npm run update-schema && GRAPHQL_ENV=development node graphql/index.js\"",
     "update-schema": "node graphql/scripts/updateSchema.js",
     "test": "node jest/gen-config.js && NODE_PATH=node_modules jest --config=jest/config.json --no-cache",
     "testing": "NODE_ENV=testing webpack-dev-server --config ./webpack/webpack.dev.babel.js --progress --colors --content-base ./build --port $npm_package_config_port"
